首页界面优化
Code Source From: Self Code
Description:  界面优化
Jira:  #[Optional]
市场项目编号（名称）：[Optional]

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
             android:name=".ui.LoginActivity"
             android:protectionLevel="signature"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+            android:theme="@style/AppLauncherTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
