--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.tmxk.wscl.android"
-        minSdkVersion 15
+        minSdkVersion 19
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -45,4 +45,5 @@ dependencies {
     annotationProcessor "org.projectlombok:lombok:1.18.2"
     implementation "com.android.support:design:28.0.0"
     implementation 'com.nshmura:recyclertablayout:1.5.0'
+    implementation 'com.jaeger.statusbaruitl:library:1.3.6'
 }
