--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,6 @@ repositories {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
@@ -46,4 +45,5 @@ dependencies {
     implementation "com.android.support:design:28.0.0"
     implementation 'com.nshmura:recyclertablayout:1.5.0'
     implementation 'com.jaeger.statusbaruitl:library:1.3.6'
+    implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0-alpha-14'
 }
