--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,5 @@ dependencies {
     implementation 'com.nshmura:recyclertablayout:1.5.0'
     implementation 'com.jaeger.statusbaruitl:library:1.3.6'
     implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0-alpha-14'
+    implementation 'com.contrarywind:Android-PickerView:4.1.6'
 }
