--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,8 +38,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
     implementation 'io.reactivex.rxjava2:rxjava:2.1.11'
-    implementation 'com.jakewharton:butterknife:9.0.0-rc1'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:9.0.0-rc1'
+    implementation 'com.jakewharton:butterknife:8.6.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
     compileOnly 'org.glassfish:javax.annotation:10.0-b28'
     compileOnly 'org.projectlombok:lombok:1.18.2'
     annotationProcessor "org.projectlombok:lombok:1.18.2"
@@ -48,4 +48,5 @@ dependencies {
     implementation 'com.jaeger.statusbaruitl:library:1.3.6'
     implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0-alpha-14'
     implementation 'com.contrarywind:Android-PickerView:4.1.6'
+    implementation 'com.github.dongjunkun:DropDownMenu:1.0.4'
 }
