--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ android {
 repositories {
     jcenter()
     maven { url "https://dl.bintray.com/drummer-aidan/maven/" }
+    maven { url "https://jitpack.io" }
 }
 
 dependencies {
@@ -56,4 +57,5 @@ dependencies {
     implementation 'com.contrarywind:Android-PickerView:4.1.6'
     implementation 'com.github.dongjunkun:DropDownMenu:1.0.4'
     compile fileTree(dir:  'libs' , include: ['*.jar'])
+    implementation 'com.github.arcadefire:nice-spinner:1.3.1'
 }
