--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,4 +58,5 @@ dependencies {
     implementation 'com.github.dongjunkun:DropDownMenu:1.0.4'
     compile fileTree(dir:  'libs' , include: ['*.jar'])
     implementation 'com.github.arcadefire:nice-spinner:1.3.1'
+    implementation 'com.github.huangyanbin:SmartTable:2.2.0'
 }
