--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,4 +59,5 @@ dependencies {
     compile fileTree(dir:  'libs' , include: ['*.jar'])
     implementation 'com.github.arcadefire:nice-spinner:1.3.1'
     implementation 'com.github.huangyanbin:SmartTable:2.2.0'
+    implementation 'com.github.lecho:hellocharts-android:v1.5.8'
 }
