--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,14 +53,14 @@ dependencies {
     compileOnly 'org.glassfish:javax.annotation:10.0-b28'
     compileOnly 'org.projectlombok:lombok:1.18.2'
     annotationProcessor "org.projectlombok:lombok:1.18.2"
-    implementation "com.android.support:design:28.0.0"
+    implementation 'com.android.support:design:28.0.0'
     implementation 'com.nshmura:recyclertablayout:1.5.0'
     implementation 'com.jaeger.statusbaruitl:library:1.3.6'
     implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0-alpha-14'
     implementation 'com.contrarywind:Android-PickerView:4.1.6'
     implementation 'com.github.dongjunkun:DropDownMenu:1.0.4'
-    compile fileTree(dir:  'libs' , include: ['*.jar'])
     implementation 'com.github.arcadefire:nice-spinner:1.3.1'
     implementation 'com.github.huangyanbin:SmartTable:2.2.0'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0-alpha'
+    implementation files('libs/BaiduLBS_Android.jar')
 }
